k8/yowking-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: yowking1
spec:
  replicas: 1
  selector:
    matchLabels:
      name: yowking
  template:
    metadata:
      labels:
        name: yowking
    spec:
      containers:
      - name: yowking
        image: thinktt/yowking:1
        imagePullPolicy: IfNotPresent
        readinessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 10
        ports:
        - containerPort: 8080
      imagePullSecrets:
      - name: regcred
