k8/yowking-service2.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    cloud.google.com/app-protocols: '{"my-port":"HTTP2"}'
  name: yowking-service2
  labels:
    app: yowking-service2
spec:
  type: NodePort
  ports:
  - port: 443
    targetPort: 8080
    protocol: TCP
    name: my-port
  selector:
    app: yowking
