k8/yowking-service3.yaml
apiVersion: v1
kind: Service
metadata:
  name: yowking-service
spec:
  selector:
    name: yowking
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
